syntax = 'proto3';

package checkout;

option go_package = "gitlab.ozon.dev/homework/homework-1/checkout/pkg/checkout_v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

service Checkout {
  rpc AddToCart(AddToCartRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/add_to_cart"
      body: "*"
    };
  }

  rpc DeleteFromCart(DeleteFromCartRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/delete_from_cart"
      body: "*"
    };
  }

  rpc ListCart(ListCartRequest) returns (ListCartResponse) {
      option (google.api.http) = {
        post: "/v1/list_cart"
        body: "*"
      };
  }

  rpc Purchase(PurchaseRequest) returns (PurchaseResponse) {
    option (google.api.http) = {
      post: "/v1/purchase"
      body: "*"
    };
  }
}

message AddToCartRequest {
  int64 user_id = 1 [(validate.rules).int64.gt = 0];
  uint32 sku = 2;
  uint32 count = 3 [(validate.rules).uint32.lt = 65636];
}

message DeleteFromCartRequest {
  int64 user_id = 1 [(validate.rules).int64.gt = 0];
  uint32 sku = 2;
  uint32 count = 3 [(validate.rules).uint32.lt = 65636];
}

message ListCartRequest {
  int64 user_id = 1 [(validate.rules).int64.gt = 0];
}

message ListCartResponse {
  uint32 total_price = 1;
  repeated Item items = 2;
}

message Item {
  uint32 sku = 1;
  uint32 count = 2 [(validate.rules).uint32.lt = 65636];
  uint32 price = 3;
  string name = 4;
}

message PurchaseRequest {
  int64 user_id = 1 [(validate.rules).int64.gt = 0];
}

message PurchaseResponse {
  int64 order_id = 1;
}
